# learning_material

./: .env  .gitignore  README.md  antigravity.py  docker-compose.yaml  graph_view.html  knowledge_store.db  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  semantic_cache.db  state_store_v2.db  state_store_v2.db.bak  template_parts.txt  trace_logs.jsonl  vector_store.json
web/backend/: .gitignore  app.db  knowledge_store.db  llm_response_error.json  main.py  migrate_order.py  migrate_order_aiomysql.py  pyproject.toml  requirements.txt  scratch_run_pipeline.py  scratch_test_project_gen.py  semantic_cache.db  state_store_v2.db  trace_logs.jsonl  vector_store.json
web/backend/alembic/: env.py
web/backend/alembic/versions/: 3492a208f2fc_add_missing_columns.py  fef6e44f2c74_init_database_schema.py
web/backend/app/ai_engine/: antigravity.py
web/backend/app/api/: api_router.py
web/backend/app/core/: config.py
web/backend/app/db/: session.py
web/backend/app/models/: __init__.py  artifact.py  course.py  lesson.py  major.py  program.py  semester.py  session.py
web/backend/app/schemas/: artifact.py  course.py  lesson.py  major.py  program.py  semester.py  session.py
web/backend/scratch/: create_db_mysql.py  db_check.py  db_info.txt  inspect_db.py  inspect_db_async.py  lessons_info.txt  mindmap_output.md  read_lesson_mindmap.py  read_mindmap.py  session_mindmap_info.txt  test_generate_session.py  test_session_gen.py  view_lessons.py  view_session_mindmap.py
web/backend/tests/: test_mindmap_compiler.py  test_pipeline_api.py
(+1269 files in other folders)
