[project]
name = "learning-material-factory"
version = "0.1.0"
description = "Multi-Agent Elearning Learning Material Generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.2",
    "jinja2>=3.1.2",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "e2b>=0.1.0",
    "e2b-code-interpreter>=0.0.10",
]

[tool.uv]
workspace = { members = ["web/backend"] }

[tool.pyright]
extraPaths = ["web/backend"]
pythonVersion = "3.10"
pythonPlatform = "Windows"

