[project]
name = "elearning-backend"
version = "0.1.0"
description = "Elearning Agent Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.11.0",
    "python-dotenv>=1.0.0",
    "mistune>=3.0.0",
]

[tool.pyright]
extraPaths = [".", "app/ai_engine", "../.."]
